# Xylor

./: .gitignore  CMakeLists.txt  README.md
XY Files/: test.xy
scripts/: generate_project.bat  test.bat
src/: main.cpp
src/Classes/Tokens/: Token.cpp  Token.h
src/Enums/: TokenType.h
tests/: test1.cpp
